--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-<h3>Điền tên của người dùng: </h3>
+<h3>Điền tên của người dùng tại đây: </h3>
 <form method="get" action="/hello">
     <input type="input" name="name">
     <button type="submit">Submit</button>
